--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <title></title>
   </head>
   <body>
-    <strong>this is my first git base</strong>
+    <body>
+<div id="content">
+<h1 class="title">/usr/huy/notes</h1>
+
+<div id="outline-container-org54147cc" class="outline-2">
+<h2 id="org54147cc"><span class="section-number-2">1</span> <a href="https://news.ycombinator.com/">Hackernews</a></h2>
+</div>
+<div id="postamble" class="status">
+<p class="author">Author: Dinh D.John</p>
+<p class="date">Created: Today mF</p>
+<p class="validation"></p>
+</div>
+
+
+</body>
   </body>
 </html>
