--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <body>
 <div id="content">
-<h1 class="title">/usr/huy/notes</h1>
+<h1 class="title">/usr/duong/notes</h1>
 
 <div id="outline-container-org54147cc" class="outline-2">
 <h2 id="org54147cc"><span class="section-number-2">1</span> <a href="https://news.ycombinator.com/">Hackernews</a></h2>
