add gate note, medium

--- a/index.html
+++ b/index.html
@@ -5,20 +5,26 @@
     <title></title>
   </head>
   <body>
-    <body>
-<div id="content">
-<h1 class="title">/usr/duong/notes</h1>
+      <div id="content">
+        <h1 class="title">/usr/duong/notes</h1>
 
-<div id="outline-container-org54147cc" class="outline-2">
-<h2 id="org54147cc"><span class="section-number-2">1</span> <a href="https://news.ycombinator.com/">Hackernews</a></h2>
-</div>
-<div id="postamble" class="status">
-<p class="author">Author: Dinh D.John</p>
-<p class="date">Created: Today mF</p>
-<p class="validation"></p>
-</div>
+        <div id="outline-container-org54147cc" class="outline-2">
+          <h2 id="org54147cc"><span class="section-number-2">1</span> <a href="https://news.ycombinator.com/">Hackernews</a></h2>
+        </div>
 
+        <div id="outline-container-org54147cc" class="outline-2">
+          <h2 id="org54147cc"><span class="section-number-2">1</span> <a href="https://www.gatesnotes.com/">Gate notes</a></h2>
+        </div>
 
-</body>
+        <div id="outline-container-org54147cc" class="outline-2">
+          <h2 id="org54147cc"><span class="section-number-2">1</span> <a href="https://www.medium.com/">Medium</a></h2>
+        </div>
+
+        <div id="postamble" class="status">
+          <p class="author">Author: Dinh D.John</p>
+          <p class="date">Created: Today mF</p>
+          <p class="validation"></p>
+        </div>
+      </div>
   </body>
 </html>
